# finecurator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/finecurator/: __init__.py  cli.py  export.py  models.py  pipeline.py  registry.py  state.py
src/finecurator/adapters/: __init__.py  base.py  erara.py  iiif.py
src/finecurator/formats/: __init__.py  alto.py  base.py  iiif.py  mets.py  rocrate.py
src/finecurator/http/: __init__.py  client.py  cookies.py  download.py  headers.py
src/finecurator/protocols/: __init__.py  base.py  iiif.py  oai_pmh.py
src/finecurator/repos/: __init__.py  base.py  erara.py
src/finecurator/stages/: __init__.py  base.py
src/finecurator/utils/: __init__.py  cleaning.py  download.py  file.py  metadata.py  processing.py  text.py  validation.py
