[project]
name = "finecurator"
version = "0.1.0"
description = "A modular toolkit for downloading, processing, and curating datasets from cultural heritage sources"
readme = "README.md"
authors = [
    { name = "Sebastian Majstorovic", email = "storytracer@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
]

[project.scripts]
finecurator = "finecurator.cli:cli"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
