[project]
name = "finecurator"
version = "0.1.0"
description = "A modular toolkit for downloading, processing, and curating datasets from cultural heritage sources"
readme = "README.md"
authors = [
    { name = "Sebastian Majstorovic", email = "storytracer@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "httpx[http2]>=0.27",
    "pydantic>=2.0",
    "tenacity>=8.0",
    "tqdm>=4.0",
    "fake-useragent>=1.4",
    "tldextract>=5.0",
    "url64>=0.1",
]

[project.scripts]
finecurator = "finecurator.cli:cli"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
